* check at startup that existing RRD files conform to the config specifications -- niko
* 3 pings is the official minimum now -- niko
* graph fixes for small numbers of pings -- Chris Wilson <chris *aidworld.org>
* fix the LDAP probe killing the CGI with perl <5.6 -- Peter Farmer <pfarmer *hashbang.org.uk>
* make the LDAP probe work withouth IO::Socket::SSL -- niko
* matchers start with a capital letter now -- niko
* new probe programming interface -- niko
 - more strict config file checking giving helpful error messages when necessary
 - generate probe documentation automatically from the code
 - eliminate PROBE_CONF sections
 - several minor incompatible probe changes; see the smokeping_upgrade document for details 
* allow target-specific vars get defaults from Probes section -- niko
* timeout fixes in basefork.pm -- niko
* config file examples and smokeping_examples document -- niko
* documentation updates and reorganizing -- niko
* move all smokeping-specific perl modules into the Smokeping namespace -- niko
* new commandline options '--config=X' and '--check' -- niko
* FPing: support "-t", "-p" and "-i" fping params -- Chris Wilson <chris *aidworld.org>
* FPing6: test against ::1 instead of localhost -- Sebastian Wiesinger <smokeping *tracker.fire-world.de>
* fix for basefork.pm IO::Select property has_exception is very platform dependent
  by ignoring it altogether things actually work better. Especially on Solaris which
  does have propper support for has_exception as oposed to linux. --  Niko Tyni <ntyni *iki.fi>
  
2005/1/30 -- 1.38

* fixed error messages for environments with mixed ipv6 and ipv4 setups  -- Peter W. Osel <pwo *Infineon.COM>
* fixed smoke coloring for 5 pings problem -- Tobi
* fixed User-Agent example in Curl probe -- Sebastian Wiesinger <smokeping *tracker.fire-world.de>

2005/1/12 -- 1.37

* base class did assume that concurrent probes were off by default
  -- Niko Tyni <ntyni *iki.fi>

2005/1/7 -- 1.36 (1.35 was an internal release)
