@@ -1,3 +1,5 @@
+* Curl timeouts work better now -- niko
+* Curl User-Agent string doesn't need quotes anymore -- niko
 * check at startup that existing RRD files conform to the config specifications -- niko
 * 3 pings is the official minimum now -- niko
 * graph fixes for small numbers of pings -- Chris Wilson <chris *aidworld.org>
